Fix routing issue

--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -1,5 +1,5 @@
 <p>
-  <a href="#" (click)="cancelQuizClicked()">
+  <a href="#" (click)="cancelQuizClicked(); false">
     Cancel and return to quiz list
   </a>
 </p>
