--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -3,7 +3,7 @@
 <p>Time spent: {{ timeSpent }} seconds</p>
 <p>Points: {{ points }}</p>
 <p>
-  <a href="#" (click)="backToHomePageClicked()">
+  <a href="#" (click)="backToHomePageClicked(); false">
     Back to home page
   </a>
 </p>
